Refactored SCSS code

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,18 +1,20 @@
 <section class="hero">
-  <div class="hero__contact">
-    <a class="hero__contact-phone" href="tel:+380967555100">
+  <div class="contact">
+    <a class="contact__phone" href="tel:+380967555100">
       +38 096 755 51 00
     </a>
   </div>
-  <div class="hero__heading">
-    <h1 class="hero__title hero__heading-title">
-      <span class="hero__heading-line">
+
+  <div class="heading">
+    <h1 class="hero__title heading__title">
+
+      <span class="heading__line">
         Комплексний
-        <picture class="hero__heading-image">
+        <picture class="heading__image">
           <source srcset="./static/img/smile.avif" type="image/avif" />
           <source srcset="./static/img/smile.webp" type="image/webp" />
           <img
-            class="hero__image hero__heading-image-smile"
+            class="hero__image heading__image-smile"
             src="./static/img/smile.jpg"
             alt="Посмішка жінки, що підтверджує якість послуг клініки"
             loading="lazy"
@@ -21,12 +23,13 @@
           />
         </picture>
       </span>
-      <span class="hero__heading-line">
-        <picture class="hero__heading-image">
+      
+      <span class="heading__line">
+        <picture class="heading__image">
           <source srcset="./static/img/dental.avif" type="image/avif" />
           <source srcset="./static/img/dental.webp" type="image/webp" />
           <img
-            class="hero__image hero__heading-image-dental"
+            class="hero__image heading__image-dental"
             src="./static/img/dental.jpg"
             alt="Інструменти стоматолога та зуби на білому фоні"
             loading="lazy"
@@ -36,24 +39,26 @@
         </picture>
         Чек-Ап
       </span>
+
     </h1>
   </div>
-  <div class="hero__content">
-    <div class="hero__content-info hero__content-block">
+
+  <div class="content">
+    <div class="content__block content__block-info">
       <h2 class="hero__title hero__content-title">
         У клініці <span class="hero__title-orange">soprano</span>
       </h2>
 
-      <div class="hero__content-text">
+      <div class="content__text">
         <p>
           Глибока діагностика, прозорий план лікування та повне розуміння стану
           вашого здоров’я — все в одному візиті.
         </p>
-        <a href="./SopranoClinic/">
+        <a href="/SopranoClinic/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
-            class="hero__content-button-arrow"
+            class="content__button-arrow"
           >
             <path
               fill="currentColor"
@@ -63,16 +68,16 @@
         </a>
       </div>
 
-      <a class="hero__content-button" href="/SopranoClinic/">
+      <a class="content__button" href="/SopranoClinic/">
         Записатись на чек-ап
       </a>
     </div>
-    <div class="hero__content-block">
+    <div class="content__block">
       <picture>
         <source srcset="./static/img/woman.avif" type="image/avif" />
         <source srcset="./static/img/woman.webp" type="image/webp" />
         <img
-          class="hero__image hero__content-image"
+          class="hero__image content__image"
           src="./static/img/woman.jpg"
           alt="Жінка що посміхається, демонструючи здорові зуби"
           loading="lazy"
