--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -5,8 +5,24 @@
 <meta name="description" content="Soprano Clinic — Ми ті, хто потурбується про ваше здоров'я." />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
+<meta name="author" content="Soprano Clinic" />
 
-<!-- TODO: додати open graph мета теги -->
+<meta http-equiv="Cache-Control" content="max-age=3600, public">
+<!-- <meta http-equiv="Content-Security-Policy" content="default-src https:" /> -->
+ 
+<meta property="og:type" content="website">
+<meta property="og:title" content="Soprano Clinic — Ми ті, хто потурбується про ваше здоров'я.">
+<meta property="og:description" content="Є можливість записатися на прийом до лікаря онлайн. Ми надаємо широкий спектр стоматологічних послуг.">
+<meta property="og:url" content="https://davydikkes.github.io/SopranoClinic/">
+<meta property="og:image" content="https://davydikkes.github.io/SopranoClinic/static/img/dental.avif">
+<meta property="og:image:type" content="image/avif" />
+<meta property="og:image:width" content="400" />
+<meta property="og:image:height" content="300" />
+<meta property="og:image:alt" content="Soprano Clinic — Ми ті, хто потурбується про ваше здоров'я.">
 
-<link rel="preload" href="./css/main.css?v=3.1" as="style" />
-<link href="./css/main.css?v=3.1" rel="stylesheet" />
+<meta property="og:site_name" content="Soprano Clinic">
+<meta property="og:locale" content="uk_UA">
+
+<link rel="alternate" hreflang="uk" href="https://davydikkes.github.io/SopranoClinic/">
+<link rel="preload" href="./css/main.css?v=1.2" as="style" />
+<link href="./css/main.css?v=1.2" rel="stylesheet" />
