--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,6 +5,7 @@
       class="contact__phone"
       href="tel:+380967555100"
       rel="nofollow noreferrer"
+      title="Номер телефону"
       aria-label="Телефон клініки Soprano"
     >
       +38 096 755 51 00
@@ -64,13 +65,12 @@
   </div>
 
   <div class="content">
-    <div class="content__block content__block-info">
+    <div class="content__block info">
       <h2 class="hero__title">
         У клініці <span class="hero__title-orange">soprano</span>
       </h2>
-
-      <div class="content__text">
-        <p>
+      <div class="description">
+        <p class="description__text">
           Глибока діагностика, прозорий план лікування та повне розуміння стану
           вашого здоров’я — все в одному візиті.
         </p>
@@ -78,12 +78,11 @@
           href="/SopranoClinic/"
           rel="home"
           aria-label="Головна сторінка клініки Soprano"
+          class="description__link"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            class="content__button-arrow"
-          >
+          <svg xmlns="http://www.w3.org/2000/svg"
+          class ="description__arrow"
+          viewBox="0 0 24 24">
             <path
               d="M12.884 5.116a1.253 1.253 0 0 0-1.768 0l-5 5a1.25 1.25 0 0 0 1.768 1.768l2.866-2.866V18a1.25 1.25 0 1 0 2.5 0V9.018l2.866 2.866a1.25 1.25 0 1 0 1.768-1.768z"
             />
