--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -9,9 +9,10 @@
 
 <meta http-equiv="Cache-Control" content="max-age=3600, public">
 <!-- <meta http-equiv="Content-Security-Policy" content="default-src https:" /> -->
- 
+
+
 <meta property="og:type" content="website">
-<meta property="og:title" content="Soprano Clinic — Ми ті, хто потурбується про ваше здоров'я.">
+<meta property="og:title" content="Soprano Clinic — Cтоматологічна клініка">
 <meta property="og:description" content="Є можливість записатися на прийом до лікаря онлайн. Ми надаємо широкий спектр стоматологічних послуг.">
 <meta property="og:url" content="https://davydikkes.github.io/SopranoClinic/">
 <meta property="og:image" content="https://davydikkes.github.io/SopranoClinic/static/img/dental.avif">
